# slack-channel-downloader

./: .env.sample  LICENSE  README.md  main.py  pyproject.toml
src/slack_downloader/: __init__.py  client.py  config.py  downloader.py  exporters.py  utils.py
